# SiglusSceneScriptUtility-GUI

./: .gitignore  README.md  SPEC.md  UPSTREAM.md  changelog.md  instructions.md  manual.md  manual_cn.md  pyproject.toml  下载 SiglusSSU-GUI.bat  启动 SiglusSSU-GUI.bat  环境配置.bat
.github/workflows/: portable-windows.yml  publish.yml  python-ci.yml
docs/gui/: 全局选项.md  分析.md  初始化.md  回编测试.md  图片g00.md  场景教程.md  常用工作流.md  引擎补丁.md  执行标签.md  提取.md  操作手册.md  故障排除.md  数据库.md  文本映射.md  编译.md  视频.md  语言服务器.md  语音收集.md  资源浏览.md  音频.md
packaging/: gui_entry.py  下载更新.ps1  使用说明.txt
scripts/: build_portable.bat  build_portable.py  build_pure_wheel.py  download_portable.ps1  fetch_ffmpeg.py  first_push.ps1  setup_env.bat  setup_env.py  setup_env.sh  test_clannad.bat  test_clannad.py  test_panel_argv.py
src/siglus_ssu/: BS.py  CA.py  GEI.py  IA.py  LA.py  __init__.py  __main__.py  analyze.py  bundled_tools.py  common.py  compiler.py  dat.py  disam.py  extract.py  ffmpeg_fetch.py  g00.py  koe_collector.py  linker.py  lsp.py  native_ops.py  parallel.py  patch.py  pck.py  sound_tool.py  test.py  textmap.py
src/siglus_ssu/rust/: Cargo.toml
src/siglus_ssu/rust/src/: lib.rs  lzss.rs  lzss32.rs
src/siglus_ssu_gui/: __init__.py  __main__.py  app.py  const_check.py  help.py  markdown_view.py  nav.py  preview_service.py  process_util.py  resource_catalog.py  runner.py  scroll.py  theme.py  widgets.py
src/siglus_ssu_gui/panels/: __init__.py  all_panels.py  base.py  browser_panel.py  manual_panel.py
