[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "siglus-ssu"
version = "0.3.7"
description = "SiglusEngine SceneScript Utility for compiling, extracting and analyzing scripts and other resource files."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jirehlov" }
]
dependencies = []

[project.scripts]
siglus-ssu = "siglus_ssu.__main__:main"

[project.urls]
Repository = "https://github.com/Jirehlov/SiglusSceneScriptUtility"
Issues = "https://github.com/Jirehlov/SiglusSceneScriptUtility/issues"

[dependency-groups]
dev = [
    "maturin>=1.12.4",
    "ruff>=0.15.2",
    "pillow>=12.1.1",
    "psutil>=5.9",
]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB105",
    "FURB167",
    "PIE808",
    "RUF010",
    "UP015",
    "UP037",
    "B009",
    "B010",
    "B043",
    "C413",
    "C420",
    "FURB122",
    "FURB142",
    "FURB188",
    "SIM905",
]
fixable = [
    "FURB105",
    "FURB167",
    "PIE808",
    "RUF010",
    "UP015",
    "UP037",
    "B009",
    "B010",
    "B043",
    "C413",
    "C420",
    "FURB122",
    "FURB142",
    "FURB188",
    "SIM905",
]

[tool.maturin]
python-source = "src"
module-name = "siglus_ssu.native_accel"
manifest-path = "src/siglus_ssu/rust/Cargo.toml"
sdist-generator = "git"
exclude = [
    "src/siglus_ssu/const.py",
    { path = "src/siglus_ssu/rust/**/*", format = "wheel" },
]
